# SnapEase

./: CMakeLists.txt
ImgAlg/: CMakeLists.txt  imagealg.cpp  imagealg.h
lib3rd/libjpeg/: CMakeLists.txt
lib3rd/libpng/: CMakeLists.txt
lib3rd/libqr/: CMakeLists.txt  qrencode.c
lib3rd/zlib/: CMakeLists.txt
libalg/: CMakeLists.txt  imagereader.cpp  imagereader.h  kmeans.h
libutil/: CMakeLists.txt  glob.h  logtxt.cpp  logtxt.h  public.h  socket.cpp  socket.h  util.h
mainui/: CMakeLists.txt  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  aboutus.cpp  aboutus.h  aboutus.ui  activedlg.cpp  activedlg.h  activedlg.ui  arrowitem.cpp  arrowitem.h  colordlg.cpp  colordlg.h  colordlg.ui  colorlist.cpp  colorlist.h  colorlist.ui  colorpicker.cpp  colorpicker.h  cropitem.cpp  cropitem.h  imageedit.cpp  imageedit.h  imageedit.ui  imagescene.cpp  imagescene.h  imageview.cpp  imageview.h  main.cpp  mainui.cpp  mainui.h  mainui.ui  memdlg.cpp  memdlg.h  memdlg.ui  paramdlg.cpp  paramdlg.h  paramdlg.ui  penitem.cpp  (+36 more)
mainui/style/dark/: darkstyle.qss
mainui/style/light/: lightstyle.qrc  lightstyle.qss
mainui/translations/: app.ts  app_en.qm
