#指定cmake的最小版本号
CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

#指定项目名称
PROJECT(SnapEase LANGUAGES CXX)

ADD_SUBDIRECTORY(mainui)
ADD_SUBDIRECTORY(libalg)
ADD_SUBDIRECTORY(libutil)
ADD_SUBDIRECTORY(service)
ADD_SUBDIRECTORY(lib3rd/libjpeg)
ADD_SUBDIRECTORY(lib3rd/libpng)
ADD_SUBDIRECTORY(lib3rd/libqr)
ADD_SUBDIRECTORY(lib3rd/zlib)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "Install")
SET_TARGET_PROPERTIES(libjpeg libpng libqr zlib PROPERTIES FOLDER lib3rd)